--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ file.download.url=C:/Users/13681/Desktop
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 #SUSTechGamer-main/FrontEnd/src/html
-spring.thymeleaf.prefix=classpath:/SUSTechGamer-main/FrontEnd/src/html/
+spring.thymeleaf.prefix=classpath:/FrontEnd/src/html/
 
 spring.mail.host=smtp.exmail.qq.com
 spring.mail.username=11813015@mail.sustech.edu.cn
